<resources>
    <string name="app_name">Produtos Montáveis</string>
    <string name="challenge">Desafios</string>
    <string name="classroom">Sala de aula</string>
    <string name="profile">Perfil</string>
    <string name="profile_picture">Foto de perfil</string>
    <string name="profile_name">Seu nome</string>
    <string name="start">Iniciar</string>
    <string name="progress_status">Progresso: %.0f%%</string>
    <string name="learning">Aprendizado</string>
    <plurals name="challenges_completed">
        <item quantity="one">%d exercício concluído</item>
        <item quantity="other">%d exercícios concluídos</item>
    </plurals>
    <string name="student_status">%s, %d points</string>
    <string name="a_quadrado">a<sup><small>2</small></sup></string>
    <string name="b_quadrado">b<sup><small>2</small></sup></string>
    <string name="return_label">Voltar</string>
    <string name="level">%d</string>
    <string name="badge1">Quadrado da soma</string>
    <string name="badge2">Quadrado da diferença</string>
    <string name="badge3">Diferença de quadrados</string>
    <string name="badge4">Cubo da soma</string>
    <string name="badge5">Soma de cubos</string>
    <string name="badge6">Cubo da diferença</string>
    <string name="badge7">Diferença de cubos</string>
    <string name="not_verified">Verifique sua conta</string>
    <string name="not_logged_in_message">Sua conta precisa ser verificada para você participar desta seção.</string>
    <string name="login">Fazer Login</string>
    <string name="classroom_code">Código da sala</string>
    <string name="classroom_code_message">Para participar de uma sala, peça o código para o seu professor.</string>
    <string name="exercises">Exercícios</string>
    <string name="on_progress">Em andamento</string>
    <string name="completed">Concluído</string>
    <string name="no_assignments">Você não possui nenhum exercício no momento</string>
    <string name="total_points">%d points</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="answer">Responder</string>
</resources>