<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.produtos.montaveis.ui.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context=".ui.profile.ProfileFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_profile_img"
            android:layout_width="@dimen/profile_img"
            android:layout_height="@dimen/profile_img"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="@dimen/profile_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6C6868"
                android:contentDescription="@string/profile_picture"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_foreground" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_student_name"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@{viewModel.student.name}"
            tools:text="@string/profile_name"
            app:layout_constraintBottom_toBottomOf="@+id/cv_profile_img"
            app:layout_constraintStart_toEndOf="@+id/cv_profile_img"
            app:layout_constraintTop_toTopOf="@+id/cv_profile_img" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:id="@+id/tv_student_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Principiante"
            app:layout_constraintBottom_toBottomOf="@+id/cv_profile_img"
            app:layout_constraintStart_toEndOf="@+id/cv_profile_img"
            app:layout_constraintStart_toStartOf="@+id/tv_student_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_student_name" />

        <TextView
            android:id="@+id/learning_label"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="@string/learning"
            app:layout_constraintStart_toStartOf="@+id/cv_profile_img"
            app:layout_constraintTop_toBottomOf="@+id/cv_profile_img" />

        <TextView
            android:id="@+id/learning_progress"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{@plurals/challenges_completed(viewModel.student.exercisesCompleted, viewModel.student.exercisesCompleted)}"
            tools:text="20 desafios concluídos"
            app:layout_constraintStart_toStartOf="@+id/cv_profile_img"
            app:layout_constraintTop_toBottomOf="@+id/learning_label" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            android:indeterminateOnly="false"
            android:progress="@{viewModel.student.exercisesCompleted}"
            android:progressDrawable="@drawable/circular_progress_indicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/learning_progress"
            tools:progress="40" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline2"
            android:textStyle="bold"
            android:id="@+id/student_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Integer.toString(viewModel.student.level)}"
            tools:text="2"
            app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar"
            app:layout_constraintStart_toStartOf="@+id/progress_bar"
            app:layout_constraintTop_toTopOf="@+id/progress_bar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>