<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.classroom.ClassroomFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/exercises"
            android:src="@drawable/ic_notification" />

    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/layout_background"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/tv_exercises"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercises"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/exercises_on_progress_label"
            style="@style/Widget.ProdutosMontaveis.TextViewFocused"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/on_progress"
            app:drawableTopCompat="@drawable/ic_homework_on_progress"
            app:layout_constraintEnd_toStartOf="@+id/exercises_done_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_exercises" />

        <View
            android:id="@+id/exercises_on_progress_bar"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="2dp"
            android:background="?attr/colorPrimary"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/exercises_on_progress_label"
            app:layout_constraintStart_toStartOf="@+id/exercises_on_progress_label"
            app:layout_constraintTop_toBottomOf="@+id/exercises_on_progress_label" />

        <TextView
            android:id="@+id/exercises_on_progress"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/exercises_on_progress_label"
            app:layout_constraintStart_toStartOf="@+id/exercises_on_progress_label"
            app:layout_constraintTop_toBottomOf="@+id/exercises_on_progress_label"
            tools:text="0" />

        <TextView
            android:id="@+id/exercises_done_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="96dp"
            android:text="@string/completed"
            app:drawableTopCompat="@drawable/ic_homework_done"
            app:layout_constraintBaseline_toBaselineOf="@+id/exercises_on_progress_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/exercises_on_progress_label"
            tools:ignore="TextContrastCheck" />

        <View
            android:id="@+id/exercises_done_bar"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="2dp"
            android:background="?attr/colorPrimary"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/exercises_done_label"
            app:layout_constraintStart_toStartOf="@+id/exercises_done_label"
            app:layout_constraintTop_toBottomOf="@+id/exercises_done_label" />

        <TextView
            android:id="@+id/exercises_done"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/exercises_done_label"
            app:layout_constraintStart_toStartOf="@+id/exercises_done_label"
            app:layout_constraintTop_toBottomOf="@+id/exercises_done_label"
            tools:text="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="24dp"
        android:gravity="center"
        android:text="@string/no_assignments"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/ic_no_assignments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:ignore="TextContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_exercises"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:itemCount="7"
        tools:listitem="@layout/exercise_item" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            layout="@layout/layout_account_not_verified"
            android:visibility="visible" />

        <include
            layout="@layout/layout_not_in_classroom"
            android:visibility="visible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
